crates/weaveffi-cli/tests/snapshots/cpp_nested_modules__CMakeLists_txt.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from api.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate api.yml -o <out>

cmake_minimum_required(VERSION 3.14)
project(nested_modules_cpp VERSION 0.1.0 LANGUAGES CXX)

# The producer library to link: a full path from the NESTED_MODULES_LIBRARY cache or
# environment variable, or else the library name `nested_modules` (a CMake target
# of that name, or libnested_modules on the linker search path).
set(NESTED_MODULES_LIBRARY "$ENV{NESTED_MODULES_LIBRARY}" CACHE FILEPATH "Path to the nested_modules native library")

add_library(nested_modules_cpp INTERFACE)
add_library(nested_modules::cpp ALIAS nested_modules_cpp)
target_include_directories(nested_modules_cpp INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_features(nested_modules_cpp INTERFACE cxx_std_17)
if(NESTED_MODULES_LIBRARY)
  target_link_libraries(nested_modules_cpp INTERFACE "${NESTED_MODULES_LIBRARY}")
else()
  target_link_libraries(nested_modules_cpp INTERFACE nested_modules)
endif()

# END CMakeLists.txt
