crates/weaveffi-cli/tests/snapshots/cpp_nested_modules__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# nested_modules C++ bindings

A header-only C++17 wrapper over the `nested_modules` C ABI. `nested_modules.hpp`
includes the C header beside it; every declaration lives in
`namespace nested_modules`.

## Prerequisites

- CMake 3.14 or later
- A C++17 compiler
- The `nested_modules` native library (`libnested_modules.so`, `libnested_modules.dylib`, or
  `nested_modules.dll`)

## Use with CMake

```cmake
add_subdirectory(path/to/cpp)
add_executable(app main.cpp)
target_link_libraries(app PRIVATE nested_modules::cpp)
```

`nested_modules::cpp` adds this directory to the include path, requires
C++17, and links the native library: the file named by the `NESTED_MODULES_LIBRARY`
CMake cache variable or environment variable when set, or else
`nested_modules` by name.

```cpp
#include "nested_modules.hpp"
```

The first free function, constructor, or static member you call checks
that the linked library matches these headers and throws
`nested_modules::LoadError` if it doesn't; call `nested_modules::check_library()`
at startup to check eagerly.

<!-- END README.md -->
