crates/weaveffi-cli/tests/snapshots/cpp_nested_modules__nested_modules_hpp.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

#pragma once

#include "nested_modules.h"

#include <cstddef>
#include <cstdint>
#include <cstring>
#include <exception>
#include <memory>
#include <new>
#include <optional>
#include <stdexcept>
#include <string>
#include <string_view>
#include <unordered_map>
#include <utility>
#include <vector>

namespace nested_modules {

/**
 * Base exception for every error reported through the C ABI.
 *
 * Positive codes are the declared error codes (see the typed domain
 * exceptions); negative codes are runtime traps: -1 a generic producer
 * error, -2 a producer panic, -3 a marshalling failure, -4 a
 * callback-interface implementation that threw, and -5 a cancelled call
 * (thrown as Cancelled).
 */
class Error : public std::runtime_error {
    int32_t code_;

public:
    /** Builds an error carrying `code` and `message`. */
    Error(int32_t code, const std::string& message) : std::runtime_error(message), code_(code) {}

    /** The numeric error code. */
    int32_t code() const noexcept { return code_; }
};

/** Thrown by an async call whose CancelToken was cancelled (code -5). */
class Cancelled : public Error {
public:
    /** Builds a cancellation error carrying the producer's message. */
    explicit Cancelled(const std::string& message) : Error(-5, message) {}
};

/**
 * Thrown on first use when the linked nested_modules library was built for a
 * different C ABI revision or a different API contract than this header.
 */
class LoadError : public Error {
public:
    /** Builds a load error describing the mismatch. */
    explicit LoadError(const std::string& message) : Error(-1, message) {}
};

/**
 * Tag selecting the constructor that adopts a raw C pointer (one strong
 * reference the wrapper then owns), in the style of std::adopt_lock.
 */
struct adopt_t {
    explicit adopt_t() = default;
};

/** The adopt_t tag value: `Gadget g(adopt, raw)`. */
inline constexpr adopt_t adopt{};

/**
 * A cancellation token for cancellable async functions.
 *
 * Create one, pass it to any number of cancellable calls, and call cancel()
 * from any thread. A cancelled call settles its future with Cancelled. Each
 * call takes its own reference to the native token, so the token can be
 * destroyed at any time; the destructor releases this wrapper's reference.
 */
class CancelToken {
    nested_modules_cancel_token* handle_;

    struct none_t {};
    explicit CancelToken(none_t) noexcept : handle_(nullptr) {}

public:
    /** Creates a new, uncancelled token. */
    CancelToken() : handle_(nested_modules_cancel_token_create()) {
        if (handle_ == nullptr) throw std::bad_alloc();
    }

    /** Releases this wrapper's reference to the native token. */
    ~CancelToken() {
        if (handle_ != nullptr) nested_modules_cancel_token_destroy(handle_);
    }

    CancelToken(const CancelToken&) = delete;
    CancelToken& operator=(const CancelToken&) = delete;

    /** Transfers the native token; `other` becomes empty. */
    CancelToken(CancelToken&& other) noexcept : handle_(other.handle_) { other.handle_ = nullptr; }

    /** Releases the current token and takes over `other`'s. */
    CancelToken& operator=(CancelToken&& other) noexcept {
        if (this != &other) {
            if (handle_ != nullptr) nested_modules_cancel_token_destroy(handle_);
            handle_ = other.handle_;
            other.handle_ = nullptr;
        }
        return *this;
    }

    /** The empty token a cancellable call uses when none is passed. */
    static const CancelToken& none() noexcept {
        static const CancelToken token{none_t{}};
        return token;
    }

    /** Requests cancellation of every call this token was passed to. Idempotent and thread-safe. */
    void cancel() const noexcept {
        if (handle_ != nullptr) nested_modules_cancel_token_cancel(handle_);
    }

    /** Whether cancel() has been called. */
    bool is_cancelled() const noexcept {
        return handle_ != nullptr && nested_modules_cancel_token_is_cancelled(handle_);
    }

    /** The native token, borrowed (null for an empty token). */
    nested_modules_cancel_token* handle() const noexcept { return handle_; }
};

namespace detail {

/** The exception for a runtime (non-domain) error code. */
inline std::exception_ptr make_error(int32_t code, const std::string& message) {
    if (code == -5) return std::make_exception_ptr(Cancelled(message));
    return std::make_exception_ptr(Error(code, message));
}

/** The message of a nonzero error slot. */
inline std::string error_message(const nested_modules_error& err) {
    return std::string(err.message != nullptr ? err.message : "unknown error");
}

/** Throws the generic Error (or Cancelled) if `err` carries a nonzero code. */
inline void check(nested_modules_error& err) {
    if (err.code == 0) return;
    std::exception_ptr ex = make_error(err.code, error_message(err));
    nested_modules_error_clear(&err);
    std::rethrow_exception(ex);
}

/** Copies a producer-returned UTF-8 run into a string, then releases it. */
inline std::string take_string(const uint8_t* ptr, size_t len) {
    if (ptr == nullptr) return std::string();
    struct Release {
        const uint8_t* ptr;
        size_t len;
        ~Release() { nested_modules_free_bytes(const_cast<uint8_t*>(ptr), len); }
    } release{ptr, len};
    return std::string(reinterpret_cast<const char*>(ptr), len);
}

/** Copies a producer-returned byte run into a vector, then releases it. */
inline std::vector<uint8_t> take_bytes(const uint8_t* ptr, size_t len) {
    if (ptr == nullptr) return std::vector<uint8_t>();
    struct Release {
        const uint8_t* ptr;
        size_t len;
        ~Release() { nested_modules_free_bytes(const_cast<uint8_t*>(ptr), len); }
    } release{ptr, len};
    return std::vector<uint8_t>(ptr, ptr + len);
}

/** Views a borrowed UTF-8 run (null when empty) as a string_view. */
inline std::string_view borrow_string(const uint8_t* ptr, size_t len) noexcept {
    if (ptr == nullptr || len == 0) return std::string_view();
    return std::string_view(reinterpret_cast<const char*>(ptr), len);
}

/** Views a borrowed byte run (null when empty) as an owned vector. */
inline std::vector<uint8_t> borrow_bytes(const uint8_t* ptr, size_t len) {
    if (ptr == nullptr || len == 0) return std::vector<uint8_t>();
    return std::vector<uint8_t>(ptr, ptr + len);
}

/** The data pointer of a string argument, as the C ABI expects it. */
inline const uint8_t* utf8(std::string_view s) noexcept {
    return reinterpret_cast<const uint8_t*>(s.data());
}

} // namespace detail

/**
 * Verifies that the linked nested_modules library implements the C ABI revision
 * and the module contracts this header was generated against, throwing
 * LoadError naming the first mismatch. The check runs once; every free
 * function, constructor, and static member calls this before its first
 * native call, so calling it at startup is optional.
 */
inline void check_library() {
    static const std::string failure = [] {
        uint32_t abi = nested_modules_abi_version();
        if (abi != NESTED_MODULES_ABI_VERSION) {
            return "nested_modules: C ABI revision mismatch (header " + std::to_string(NESTED_MODULES_ABI_VERSION) +
                   ", library " + std::to_string(abi) + ")";
        }
        if (nested_modules_graphics_checksum() != 0x44d31b5b10fdb90dull) {
            return std::string("nested_modules: module 'graphics' does not match the linked library (contract checksum mismatch); regenerate the bindings for this build");
        }
        return std::string();
    }();
    if (!failure.empty()) throw LoadError(failure);
}

namespace detail {

/**
 * Serializes values into the value-buffer wire format: little-endian, packed
 * with no alignment, lengths and element counts as u32.
 */
class BufferWriter {
    std::vector<uint8_t> buf_;

    template <typename T>
    void append_le(T v) {
        for (size_t i = 0; i < sizeof(T); ++i) {
            buf_.push_back(static_cast<uint8_t>(v >> (8 * i)));
        }
    }

public:
    /** Pointer to the encoded bytes. */
    const uint8_t* data() const noexcept { return buf_.data(); }

    /** Number of encoded bytes. */
    size_t size() const noexcept { return buf_.size(); }

    void write_bool(bool v) { buf_.push_back(v ? 1 : 0); }
    void write_i8(int8_t v) { buf_.push_back(static_cast<uint8_t>(v)); }
    void write_u8(uint8_t v) { buf_.push_back(v); }
    void write_i16(int16_t v) { append_le(static_cast<uint16_t>(v)); }
    void write_u16(uint16_t v) { append_le(v); }
    void write_i32(int32_t v) { append_le(static_cast<uint32_t>(v)); }
    void write_u32(uint32_t v) { append_le(v); }
    void write_i64(int64_t v) { append_le(static_cast<uint64_t>(v)); }
    void write_u64(uint64_t v) { append_le(v); }

    void write_f32(float v) {
        uint32_t bits = 0;
        std::memcpy(&bits, &v, sizeof(bits));
        append_le(bits);
    }

    void write_f64(double v) {
        uint64_t bits = 0;
        std::memcpy(&bits, &v, sizeof(bits));
        append_le(bits);
    }

    /** Writes a byte length or an element count as a u32. */
    void write_len(size_t n) {
        if (static_cast<uint64_t>(n) > UINT32_MAX) throw Error(-3, "value buffer length exceeds u32");
        append_le(static_cast<uint32_t>(n));
    }

    void write_string(std::string_view v) {
        write_len(v.size());
        buf_.insert(buf_.end(), v.begin(), v.end());
    }

    void write_bytes(const std::vector<uint8_t>& v) {
        write_len(v.size());
        buf_.insert(buf_.end(), v.begin(), v.end());
    }

    /** Writes an optional's presence flag: 0 absent, 1 present. */
    void write_option_flag(bool present) { buf_.push_back(present ? 1 : 0); }
};

/**
 * Decodes values from the value-buffer wire format. A malformed buffer is a
 * producer/consumer contract violation (both sides are generated from one
 * API), so every decode failure throws the generic Error with the
 * marshalling code -3. Object tokens adopted before a failure live in RAII
 * wrappers that release them on unwind.
 */
class BufferReader {
    const uint8_t* data_;
    size_t len_;
    size_t pos_;

    [[noreturn]] static void fail(const char* what) {
        throw Error(-3, std::string("malformed value buffer: ") + what);
    }

    void require(size_t n, const char* what) const {
        if (len_ - pos_ < n) fail(what);
    }

    template <typename T>
    T read_le(const char* what) {
        require(sizeof(T), what);
        uint64_t v = 0;
        for (size_t i = 0; i < sizeof(T); ++i) {
            v |= static_cast<uint64_t>(data_[pos_ + i]) << (8 * i);
        }
        pos_ += sizeof(T);
        return static_cast<T>(v);
    }

public:
    BufferReader(const uint8_t* data, size_t len) noexcept : data_(data), len_(data != nullptr ? len : 0), pos_(0) {}

    /** Bytes not yet consumed. */
    size_t remaining() const noexcept { return len_ - pos_; }

    bool read_bool() {
        uint8_t b = read_le<uint8_t>("bool");
        if (b > 1) fail("bool byte out of range");
        return b != 0;
    }

    int8_t read_i8() { return read_le<int8_t>("i8"); }
    uint8_t read_u8() { return read_le<uint8_t>("u8"); }
    int16_t read_i16() { return read_le<int16_t>("i16"); }
    uint16_t read_u16() { return read_le<uint16_t>("u16"); }
    int32_t read_i32() { return read_le<int32_t>("i32"); }
    uint32_t read_u32() { return read_le<uint32_t>("u32"); }
    int64_t read_i64() { return read_le<int64_t>("i64"); }
    uint64_t read_u64() { return read_le<uint64_t>("u64"); }

    float read_f32() {
        uint32_t bits = read_le<uint32_t>("f32");
        float v = 0;
        std::memcpy(&v, &bits, sizeof(v));
        return v;
    }

    double read_f64() {
        uint64_t bits = read_le<uint64_t>("f64");
        double v = 0;
        std::memcpy(&v, &bits, sizeof(v));
        return v;
    }

    /** Reads a byte length, rejecting one larger than the bytes remaining. */
    size_t read_len() {
        uint32_t n = read_le<uint32_t>("length");
        if (static_cast<size_t>(n) > remaining()) fail("length prefix exceeds remaining buffer");
        return static_cast<size_t>(n);
    }

    /**
     * Reads an element count. Elements may encode to zero bytes, so a count
     * larger than the bytes remaining is legal; callers cap preallocation
     * with reserve_hint().
     */
    size_t read_count() { return static_cast<size_t>(read_le<uint32_t>("count")); }

    /** A preallocation size for `n` elements that a malformed count can't inflate. */
    size_t reserve_hint(size_t n) const noexcept { return n < remaining() ? n : remaining(); }

    std::string read_string() {
        size_t n = read_len();
        std::string v(reinterpret_cast<const char*>(data_) + pos_, n);
        pos_ += n;
        return v;
    }

    std::vector<uint8_t> read_bytes() {
        size_t n = read_len();
        std::vector<uint8_t> v(data_ + pos_, data_ + pos_ + n);
        pos_ += n;
        return v;
    }

    bool read_option_flag() {
        uint8_t b = read_le<uint8_t>("option flag");
        if (b > 1) fail("option flag byte out of range");
        return b != 0;
    }

    /** Rejects unconsumed bytes after decoding a complete value. */
    void expect_end() const {
        if (pos_ != len_) fail("trailing bytes after value");
    }
};

/** Releases a producer-allocated buffer with nested_modules_free_bytes on scope exit. */
struct BufferGuard {
    /** The producer-allocated buffer, or null when the call reported an error. */
    const uint8_t* ptr;
    /** The buffer length in bytes. */
    size_t len;

    BufferGuard(const uint8_t* p, size_t n) noexcept : ptr(p), len(n) {}
    BufferGuard(const BufferGuard&) = delete;
    BufferGuard& operator=(const BufferGuard&) = delete;

    ~BufferGuard() {
        if (ptr != nullptr) nested_modules_free_bytes(const_cast<uint8_t*>(ptr), len);
    }
};

} // namespace detail

/** A measurement unit shared with nested submodules. */
enum class Unit : int32_t {
    pixels = 0,
    points = 1
};

struct Canvas;
struct Shape;
struct Detail;

/** A struct two levels deep. */
struct Detail {
    double area;
};

/** A struct one level deep that references both an ancestor enum and a deeper struct. */
struct Shape {
    int32_t sides;
    /** Reference up to the parent module's enum */
    Unit unit;
    /** Reference down into a deeper module */
    Detail detail;
};

/** Top-level struct that references a struct defined one level deeper. */
struct Canvas {
    int32_t width;
    /** Reference down into a nested module */
    Shape root;
};

namespace detail {

/** Encodes a `Detail` in the value-buffer wire format. */
inline void write_Detail(BufferWriter& w, const Detail& v) {
    w.write_f64(v.area);
}

/** Decodes a `Detail` from the value-buffer wire format. */
inline Detail read_Detail(BufferReader& r) {
    double f_area = r.read_f64();
    return Detail{std::move(f_area)};
}

/** Encodes a `Shape` in the value-buffer wire format. */
inline void write_Shape(BufferWriter& w, const Shape& v) {
    w.write_i32(v.sides);
    w.write_i32(static_cast<int32_t>(v.unit));
    detail::write_Detail(w, v.detail);
}

/** Decodes a `Shape` from the value-buffer wire format. */
inline Shape read_Shape(BufferReader& r) {
    int32_t f_sides = r.read_i32();
    Unit f_unit = static_cast<Unit>(r.read_i32());
    Detail f_detail = detail::read_Detail(r);
    return Shape{std::move(f_sides), std::move(f_unit), std::move(f_detail)};
}

/** Encodes a `Canvas` in the value-buffer wire format. */
inline void write_Canvas(BufferWriter& w, const Canvas& v) {
    w.write_i32(v.width);
    detail::write_Shape(w, v.root);
}

/** Decodes a `Canvas` from the value-buffer wire format. */
inline Canvas read_Canvas(BufferReader& r) {
    int32_t f_width = r.read_i32();
    Shape f_root = detail::read_Shape(r);
    return Canvas{std::move(f_width), std::move(f_root)};
}

} // namespace detail

/** Typed errors reported by the `graphics` module's throwing functions. */
class GraphicsError : public Error {
public:
    GraphicsError(int32_t code, const std::string& msg) : Error(code, msg) {}
};

/** coordinate out of bounds */
class OutOfBoundsError : public GraphicsError {
public:
    explicit OutOfBoundsError(const std::string& msg) : GraphicsError(1, msg) {}
};

namespace detail {

/** Map a `graphics` error code and payload to its typed exception (the runtime exception for negative codes, GraphicsError for unknown codes). */
inline std::exception_ptr make_graphics_error(int32_t code, const std::string& msg, const uint8_t* payload_ptr, size_t payload_len) {
    if (code < 0) return make_error(code, msg);
    (void)payload_ptr;
    (void)payload_len;
    switch (code) {
    case 1: return std::make_exception_ptr(OutOfBoundsError(msg));
    default: return std::make_exception_ptr(GraphicsError(code, msg));
    }
}

/** Throw the typed `graphics` exception if `err` carries a nonzero code. */
inline void check_graphics(nested_modules_error& err) {
    if (err.code == 0) return;
    std::string msg = error_message(err);
    std::exception_ptr ex = make_graphics_error(err.code, msg, err.payload_ptr, err.payload_len);
    nested_modules_error_clear(&err);
    std::rethrow_exception(ex);
}

} // namespace detail

namespace graphics {

/** Construct a Canvas. */
inline Canvas new_canvas(int32_t width) {
    check_library();
    size_t out_len = 0;
    nested_modules_error err{};
    auto result = nested_modules_graphics_new_canvas(width, &out_len, &err);
    detail::check(err);
    detail::BufferGuard result_guard(result, out_len);
    detail::BufferReader result_r(result, out_len);
    Canvas ret = detail::read_Canvas(result_r);
    result_r.expect_end();
    return ret;
}

} // namespace graphics

namespace graphics::shapes {

/** Construct a Shape. */
inline Shape make_shape(int32_t sides) {
    check_library();
    size_t out_len = 0;
    nested_modules_error err{};
    auto result = nested_modules_graphics_shapes_make_shape(sides, &out_len, &err);
    detail::check(err);
    detail::BufferGuard result_guard(result, out_len);
    detail::BufferReader result_r(result, out_len);
    Shape ret = detail::read_Shape(result_r);
    result_r.expect_end();
    return ret;
}

/** Nested function returning a struct owned by an ancestor module. */
inline Canvas describe() {
    check_library();
    size_t out_len = 0;
    nested_modules_error err{};
    auto result = nested_modules_graphics_shapes_describe(&out_len, &err);
    detail::check(err);
    detail::BufferGuard result_guard(result, out_len);
    detail::BufferReader result_r(result, out_len);
    Canvas ret = detail::read_Canvas(result_r);
    result_r.expect_end();
    return ret;
}

} // namespace graphics::shapes

namespace graphics::shapes::geometry {

/** Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain. */
inline Detail compute(const Shape& shape) {
    check_library();
    detail::BufferWriter shape_buf;
    detail::write_Shape(shape_buf, shape);
    size_t out_len = 0;
    nested_modules_error err{};
    auto result = nested_modules_graphics_shapes_geometry_compute(shape_buf.data(), shape_buf.size(), &out_len, &err);
    detail::check_graphics(err);
    detail::BufferGuard result_guard(result, out_len);
    detail::BufferReader result_r(result, out_len);
    Detail ret = detail::read_Detail(result_r);
    result_r.expect_end();
    return ret;
}

} // namespace graphics::shapes::geometry

} // namespace nested_modules

// END nested_modules.hpp
