crates/weaveffi-cli/tests/snapshots/cpp_nested_modules__weaveffi_hpp.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from weaveffi.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate weaveffi.yml -o <out>

#pragma once

#include <cstdint>
#include <string>
#include <vector>
#include <optional>
#include <unordered_map>
#include <memory>
#include <stdexcept>
#include <exception>
#include <cstring>
#include <utility>

#ifndef WEAVEFFI_API
#  if defined(_WIN32) || defined(__CYGWIN__)
#    ifdef WEAVEFFI_BUILD
#      define WEAVEFFI_API __declspec(dllexport)
#    else
#      define WEAVEFFI_API __declspec(dllimport)
#    endif
#  elif defined(__EMSCRIPTEN__)
#    define WEAVEFFI_API __attribute__((used, visibility("default")))
#  elif defined(__GNUC__) && (__GNUC__ >= 4)
#    define WEAVEFFI_API __attribute__((visibility("default")))
#  else
#    define WEAVEFFI_API
#  endif
#endif

#ifndef WEAVEFFI_DEPRECATED
#  if defined(_MSC_VER)
#    define WEAVEFFI_DEPRECATED(msg) __declspec(deprecated(msg))
#  elif defined(__GNUC__) || defined(__clang__)
#    define WEAVEFFI_DEPRECATED(msg) __attribute__((deprecated(msg)))
#  else
#    define WEAVEFFI_DEPRECATED(msg)
#  endif
#endif

extern "C" {

/* The WeaveFFI C ABI revision this header was generated against. The
   producer exports weaveffi_abi_version() so a consumer can refuse to load
   a library built for a different revision instead of misreading its
   error struct or value buffers. */
#define WEAVEFFI_ABI_VERSION 1u
WEAVEFFI_API uint32_t weaveffi_abi_version(void);

typedef uint64_t weaveffi_handle_t;

/* Error slot written by every fallible call. `payload_ptr`/`payload_len`
   hold the matched error code's fields serialized in the WeaveFFI value
   buffer format (null when the code declares no fields); both the message
   and the payload are released by weaveffi_error_clear. */
typedef struct weaveffi_error {
    int32_t code;
    const char* message;
    const uint8_t* payload_ptr;
    size_t payload_len;
} weaveffi_error;

WEAVEFFI_API void weaveffi_error_clear(weaveffi_error* err);

/* Async completion callbacks receive a heap-boxed error the consumer
   owns; weaveffi_error_free releases the message, the payload, and the
   box itself. Passing NULL is a safe no-op. */
WEAVEFFI_API void weaveffi_error_free(weaveffi_error* err);
WEAVEFFI_API void weaveffi_free_string(const char* ptr);
WEAVEFFI_API void weaveffi_free_bytes(uint8_t* ptr, size_t len);

/* Linear-memory allocator used by the Wasm JS glue to stage call
   arguments. Native consumers never call these; producers targeting
   WebAssembly must export them (the generated weaveffi.c provides
   malloc/free-backed defaults). */
WEAVEFFI_API uint8_t* weaveffi_alloc(uint32_t size);
WEAVEFFI_API void weaveffi_dealloc(uint8_t* ptr, uint32_t size);

typedef struct weaveffi_cancel_token weaveffi_cancel_token;
WEAVEFFI_API weaveffi_cancel_token* weaveffi_cancel_token_create(void);
WEAVEFFI_API void weaveffi_cancel_token_cancel(weaveffi_cancel_token* token);
WEAVEFFI_API bool weaveffi_cancel_token_is_cancelled(const weaveffi_cancel_token* token);
WEAVEFFI_API void weaveffi_cancel_token_destroy(weaveffi_cancel_token* token);

/** A measurement unit shared with nested submodules. */
typedef enum { weaveffi_graphics_Unit_pixels = 0, weaveffi_graphics_Unit_points = 1 } weaveffi_graphics_Unit;
/** Error codes reported by throwing functions in the `graphics` module tree. */
typedef enum { weaveffi_graphics_GraphicsError_OutOfBounds = 1 } weaveffi_graphics_GraphicsError;

/** Construct a Canvas. */
WEAVEFFI_API const uint8_t* weaveffi_graphics_new_canvas(int32_t width, size_t* out_len, weaveffi_error* out_err);

/** Construct a Shape. */
WEAVEFFI_API const uint8_t* weaveffi_graphics_shapes_make_shape(int32_t sides, size_t* out_len, weaveffi_error* out_err);
/** Nested function returning a struct owned by an ancestor module. */
WEAVEFFI_API const uint8_t* weaveffi_graphics_shapes_describe(size_t* out_len, weaveffi_error* out_err);

/** Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain. */
WEAVEFFI_API const uint8_t* weaveffi_graphics_shapes_geometry_compute(const uint8_t* shape_ptr, size_t shape_len, size_t* out_len, weaveffi_error* out_err);

} // extern "C"

namespace weaveffi {

/** Base exception for every error reported through the C ABI. */
class WeaveFFIError : public std::runtime_error {
    int32_t code_;

public:
    WeaveFFIError(int32_t code, const std::string& msg) : std::runtime_error(msg), code_(code) {}
    int32_t code() const { return code_; }
};

namespace detail {

/** Throw the generic WeaveFFIError if `err` carries a nonzero code. */
inline void check(weaveffi_error& err) {
    if (err.code == 0) return;
    std::string msg(err.message ? err.message : "unknown error");
    int32_t code = err.code;
    weaveffi_error_clear(&err);
    throw WeaveFFIError(code, msg);
}

/** Wrap an async-callback error as the generic WeaveFFIError. */
inline std::exception_ptr make_error(int32_t code, const std::string& msg) {
    return std::make_exception_ptr(WeaveFFIError(code, msg));
}

} // namespace detail

namespace detail {

/**
 * Serializes values into the WeaveFFI value-buffer wire format: little-endian,
 * packed with no alignment, lengths and element counts as u32.
 */
class BufferWriter {
    std::vector<uint8_t> buf_;

    template <typename T>
    void append_le(T v) {
        for (size_t i = 0; i < sizeof(T); ++i) {
            buf_.push_back(static_cast<uint8_t>(v >> (8 * i)));
        }
    }

public:
    /** Pointer to the encoded bytes. */
    const uint8_t* data() const { return buf_.data(); }

    /** Number of encoded bytes. */
    size_t size() const { return buf_.size(); }

    void write_bool(bool v) { buf_.push_back(v ? 1 : 0); }
    void write_i8(int8_t v) { buf_.push_back(static_cast<uint8_t>(v)); }
    void write_u8(uint8_t v) { buf_.push_back(v); }
    void write_i16(int16_t v) { append_le(static_cast<uint16_t>(v)); }
    void write_u16(uint16_t v) { append_le(v); }
    void write_i32(int32_t v) { append_le(static_cast<uint32_t>(v)); }
    void write_u32(uint32_t v) { append_le(v); }
    void write_i64(int64_t v) { append_le(static_cast<uint64_t>(v)); }
    void write_u64(uint64_t v) { append_le(v); }

    void write_f32(float v) {
        uint32_t bits = 0;
        std::memcpy(&bits, &v, sizeof(bits));
        append_le(bits);
    }

    void write_f64(double v) {
        uint64_t bits = 0;
        std::memcpy(&bits, &v, sizeof(bits));
        append_le(bits);
    }

    /** Writes a string, byte-buffer, or collection length as a u32. */
    void write_len(size_t n) { append_le(static_cast<uint32_t>(n)); }

    void write_string(const std::string& v) {
        write_len(v.size());
        buf_.insert(buf_.end(), v.begin(), v.end());
    }

    void write_bytes(const std::vector<uint8_t>& v) {
        write_len(v.size());
        buf_.insert(buf_.end(), v.begin(), v.end());
    }

    /** Writes an optional's presence flag: 0 absent, 1 present. */
    void write_option_flag(bool present) { buf_.push_back(present ? 1 : 0); }
};

/**
 * Decodes values from the WeaveFFI value-buffer wire format. A malformed
 * buffer is a producer/consumer contract violation (both sides are generated
 * from one IDL), so every decode failure throws the generic WeaveFFIError,
 * the same channel as a producer panic.
 */
class BufferReader {
    const uint8_t* data_;
    size_t len_;
    size_t pos_;

    [[noreturn]] static void fail(const char* what) {
        throw WeaveFFIError(-2, std::string("malformed WeaveFFI value buffer: ") + what);
    }

    void require(size_t n, const char* what) const {
        if (len_ - pos_ < n) fail(what);
    }

    template <typename T>
    T read_le(const char* what) {
        require(sizeof(T), what);
        uint64_t v = 0;
        for (size_t i = 0; i < sizeof(T); ++i) {
            v |= static_cast<uint64_t>(data_[pos_ + i]) << (8 * i);
        }
        pos_ += sizeof(T);
        return static_cast<T>(v);
    }

public:
    BufferReader(const uint8_t* data, size_t len) : data_(data), len_(len), pos_(0) {}

    /** Bytes not yet consumed. */
    size_t remaining() const { return len_ - pos_; }

    bool read_bool() {
        uint8_t b = read_le<uint8_t>("bool");
        if (b > 1) fail("bool byte out of range");
        return b != 0;
    }

    int8_t read_i8() { return read_le<int8_t>("i8"); }
    uint8_t read_u8() { return read_le<uint8_t>("u8"); }
    int16_t read_i16() { return read_le<int16_t>("i16"); }
    uint16_t read_u16() { return read_le<uint16_t>("u16"); }
    int32_t read_i32() { return read_le<int32_t>("i32"); }
    uint32_t read_u32() { return read_le<uint32_t>("u32"); }
    int64_t read_i64() { return read_le<int64_t>("i64"); }
    uint64_t read_u64() { return read_le<uint64_t>("u64"); }

    float read_f32() {
        uint32_t bits = read_le<uint32_t>("f32");
        float v = 0;
        std::memcpy(&v, &bits, sizeof(v));
        return v;
    }

    double read_f64() {
        uint64_t bits = read_le<uint64_t>("f64");
        double v = 0;
        std::memcpy(&v, &bits, sizeof(v));
        return v;
    }

    /** Reads a length prefix, rejecting one larger than the bytes remaining. */
    size_t read_len() {
        uint32_t n = read_le<uint32_t>("length");
        if (static_cast<size_t>(n) > remaining()) fail("length prefix exceeds remaining buffer");
        return static_cast<size_t>(n);
    }

    std::string read_string() {
        size_t n = read_len();
        std::string v(reinterpret_cast<const char*>(data_) + pos_, n);
        pos_ += n;
        return v;
    }

    std::vector<uint8_t> read_bytes() {
        size_t n = read_len();
        std::vector<uint8_t> v(data_ + pos_, data_ + pos_ + n);
        pos_ += n;
        return v;
    }

    bool read_option_flag() {
        uint8_t b = read_le<uint8_t>("option flag");
        if (b > 1) fail("option flag byte out of range");
        return b != 0;
    }

    /** Rejects unconsumed bytes after decoding a complete value. */
    void expect_end() const {
        if (pos_ != len_) fail("trailing bytes after value");
    }
};

/** Releases a producer-allocated buffer with weaveffi_free_bytes on scope exit. */
struct BufferGuard {
    /** The producer-allocated buffer, or null when the call reported an error. */
    const uint8_t* ptr;
    /** The buffer length in bytes. */
    size_t len;

    ~BufferGuard() {
        if (ptr != nullptr) weaveffi_free_bytes(const_cast<uint8_t*>(ptr), len);
    }
};

} // namespace detail

/** A measurement unit shared with nested submodules. */
enum class Unit : int32_t {
    pixels = 0,
    points = 1
};

/** A struct two levels deep. */
struct Detail {
    double area;
};

/** A struct one level deep that references both an ancestor enum and a deeper struct. */
struct Shape {
    int32_t sides;
    /** Reference up to the parent module's enum */
    Unit unit;
    /** Reference down into a deeper module */
    Detail detail;
};

/** Top-level struct that references a struct defined one level deeper. */
struct Canvas {
    int32_t width;
    /** Reference down into a nested module */
    Shape root;
};

namespace detail {

/** Encodes a `Detail` in the WeaveFFI value-buffer format. */
inline void write_Detail(BufferWriter& w, const Detail& v) {
    w.write_f64(v.area);
}

/** Decodes a `Detail` from the WeaveFFI value-buffer format. */
inline Detail read_Detail(BufferReader& r) {
    Detail out{};
    out.area = r.read_f64();
    return out;
}

/** Encodes a `Shape` in the WeaveFFI value-buffer format. */
inline void write_Shape(BufferWriter& w, const Shape& v) {
    w.write_i32(v.sides);
    w.write_i32(static_cast<int32_t>(v.unit));
    detail::write_Detail(w, v.detail);
}

/** Decodes a `Shape` from the WeaveFFI value-buffer format. */
inline Shape read_Shape(BufferReader& r) {
    Shape out{};
    out.sides = r.read_i32();
    out.unit = static_cast<Unit>(r.read_i32());
    out.detail = detail::read_Detail(r);
    return out;
}

/** Encodes a `Canvas` in the WeaveFFI value-buffer format. */
inline void write_Canvas(BufferWriter& w, const Canvas& v) {
    w.write_i32(v.width);
    detail::write_Shape(w, v.root);
}

/** Decodes a `Canvas` from the WeaveFFI value-buffer format. */
inline Canvas read_Canvas(BufferReader& r) {
    Canvas out{};
    out.width = r.read_i32();
    out.root = detail::read_Shape(r);
    return out;
}

} // namespace detail

/** Typed errors reported by the `graphics` module's throwing functions. */
class GraphicsError : public WeaveFFIError {
public:
    GraphicsError(int32_t code, const std::string& msg) : WeaveFFIError(code, msg) {}
};

/** coordinate out of bounds */
class OutOfBoundsError : public GraphicsError {
public:
    OutOfBoundsError(const std::string& msg) : GraphicsError(1, msg) {}
};

namespace detail {

/** Map a `graphics` error code and payload to its typed exception (WeaveFFIError for runtime codes, GraphicsError for unknown codes). */
inline std::exception_ptr make_graphics_error(int32_t code, const std::string& msg, const uint8_t* payload_ptr, size_t payload_len) {
    if (code < 0) return std::make_exception_ptr(WeaveFFIError(code, msg));
    switch (code) {
    case 1: return std::make_exception_ptr(OutOfBoundsError(msg));
    default: return std::make_exception_ptr(GraphicsError(code, msg));
    }
}

/** Throw the typed `graphics` exception if `err` carries a nonzero code. */
inline void check_graphics(weaveffi_error& err) {
    if (err.code == 0) return;
    std::string msg(err.message ? err.message : "unknown error");
    std::exception_ptr ex = make_graphics_error(err.code, msg, err.payload_ptr, err.payload_len);
    weaveffi_error_clear(&err);
    std::rethrow_exception(ex);
}

} // namespace detail

namespace graphics {

/** Construct a Canvas. */
inline Canvas new_canvas(int32_t width) {
    size_t out_len = 0;
    weaveffi_error err{};
    auto result = weaveffi_graphics_new_canvas(width, &out_len, &err);
    detail::check(err);
    detail::BufferGuard result_guard{result, out_len};
    detail::BufferReader result_r(result, out_len);
    Canvas ret = detail::read_Canvas(result_r);
    result_r.expect_end();
    return ret;
}

} // namespace graphics

namespace graphics::shapes {

/** Construct a Shape. */
inline Shape make_shape(int32_t sides) {
    size_t out_len = 0;
    weaveffi_error err{};
    auto result = weaveffi_graphics_shapes_make_shape(sides, &out_len, &err);
    detail::check(err);
    detail::BufferGuard result_guard{result, out_len};
    detail::BufferReader result_r(result, out_len);
    Shape ret = detail::read_Shape(result_r);
    result_r.expect_end();
    return ret;
}

/** Nested function returning a struct owned by an ancestor module. */
inline Canvas describe() {
    size_t out_len = 0;
    weaveffi_error err{};
    auto result = weaveffi_graphics_shapes_describe(&out_len, &err);
    detail::check(err);
    detail::BufferGuard result_guard{result, out_len};
    detail::BufferReader result_r(result, out_len);
    Canvas ret = detail::read_Canvas(result_r);
    result_r.expect_end();
    return ret;
}

} // namespace graphics::shapes

namespace graphics::shapes::geometry {

/** Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain. */
inline Detail compute(const Shape& shape) {
    detail::BufferWriter shape_buf;
    detail::write_Shape(shape_buf, shape);
    size_t out_len = 0;
    weaveffi_error err{};
    auto result = weaveffi_graphics_shapes_geometry_compute(shape_buf.data(), shape_buf.size(), &out_len, &err);
    detail::check_graphics(err);
    detail::BufferGuard result_guard{result, out_len};
    detail::BufferReader result_r(result, out_len);
    Detail ret = detail::read_Detail(result_r);
    result_r.expect_end();
    return ret;
}

} // namespace graphics::shapes::geometry

} // namespace weaveffi

// END weaveffi.hpp
